syntax = "proto3";


option java_package = "com.dbmapp.grpc";

package tablemanagement;

service TableManagement {
  rpc GetTables (SchemaRequest) returns (TableListResponse);
  rpc ViewTableData (TableRequest) returns (TableDataResponse);
  rpc DropTable (TableRequest) returns (ConfirmationMessage);

  // Novo RPC para executar comandos SQL (como CREATE TABLE)
  rpc ExecuteSQL (SQLRequest) returns (GenericResponse);
}

message SchemaRequest {
  string schemaName = 1;
}

message TableRequest {
  string schemaName = 1;
  string tableName = 2;
  int32 row_Limit = 3;
}

message TableListResponse {
  repeated string tables = 1;
}

message TableDataResponse {
  repeated string columnNames = 1;
  repeated RowData rows = 2;
}

message RowData {
  repeated string values = 1;
}

message ConfirmationMessage {
  bool ok = 1;
  string message = 2;
}

message SQLRequest {
  string schemaName = 1;
  string sqlStatement = 2;
}

message GenericResponse {
  bool ok = 1;
  string message = 2;
}
